updated mobile styling for the homepage icons due to them sticking outside of the containers and fixed the contact us button to center the text. Also removed overflow on the super admin page

--- a/src/Homepage/Homepage.css
+++ b/src/Homepage/Homepage.css
@@ -223,6 +223,7 @@
     font-size: 1.3rem;
     background-color: rgb(10, 150, 94);
     cursor: pointer;
+    align-content: center;
     text-decoration: none;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
     transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
@@ -315,21 +316,51 @@
     transition: 0.2s ease-in-out;
 }
 
-@media (max-width: 540px) {
+@media (max-width: 820px) {
     .icons-section {
-        gap: 2rem;
-        padding-top: 1.5rem;
+        gap: 0;
+        display: flex;
+        /* flex-direction: row; */
+        /* flex-wrap: wrap; */
+        /* padding-top: 1.5rem; */
         padding-bottom: 1.5rem;
+        max-width: 100vw;
+        justify-content: center;
+        align-content: center;
+        margin: 0;
+        padding: 15px;
+        /* border: 1px solid red; */
     }
 
     .icons-section-icon {
-        width: 4rem;
-        height: auto;
+        width: 50%;
+        height: 50%;
+    }
+
+    .icons-section-icon img {
+        width: 30%;
     }
 
     .icons-section p {
         font-size: 0.7rem;
     }
+}
+@media (max-width: 975px) and (min-height: 1558px) {
+    .icons-section {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+        width: 100%;
+    }
+
+    .icons-section-icon {
+        width: 50%;
+        height: 100%;
+    }
+
+    .icons-section-icon img {
+        width: 80%;
+    }
+    
 }
 
 @keyframes appear {
