--- a/src/SuperAdmin/SuperAdminEdit.css
+++ b/src/SuperAdmin/SuperAdminEdit.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
 }
 .formContent {
     display: flex;
@@ -33,6 +34,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
 }
 
 .superAdminEditForm input {
